--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "repTeste",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./src/app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,12 @@
   },
   "homepage": "https://github.com/justo-marcella/repTeste#readme",
   "devDependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
+  },
+  "dependencies": {
+    "nodemon": "^2.0.7",
+    "sqlite3": "^5.0.0"
   }
 }
