--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/app.js"
+    "start": "nodemon ./src/app.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,6 @@
     "sqlite3": "^5.0.0"
   },
   "engines": {
-    "node": "14.15.4"
+    "node": "14X"
   }
 }
